K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hextris-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hextris
  template:
    metadata:
      labels:
        app: hextris
    spec:
      containers:
      - name: hextris
        image: kumail7/hextris-demo:latest
        ports:
        - containerPort: 80
