K8s/ingress.yml
# hextris-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hextris-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - hextris-prod.local
    secretName: hextris-tls-secret
  rules:
  - host: hextris-prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hextris-service
            port:
              number: 80
